# L4T-FFmpeg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_4.2.sh  build_4.4.sh  build_6.1.sh  build_7.0.sh  nvUtils2NvBuf.h  nvmpi.h  nvmpi_dec.cpp  nvmpi_enc.cpp
ffmpeg_dev/: .gitignore  copy_files.sh  try_build.sh  update_patch.sh
ffmpeg_dev/4.2/: configure
ffmpeg_dev/4.2/libavcodec/: Makefile  allcodecs.c
ffmpeg_dev/4.4/: configure
ffmpeg_dev/4.4/libavcodec/: Makefile  allcodecs.c
ffmpeg_dev/6.0/: configure
ffmpeg_dev/6.0/libavcodec/: Makefile
ffmpeg_dev/6.1/: configure
ffmpeg_dev/6.1/libavcodec/: Makefile  allcodecs.c
ffmpeg_dev/6.1/patches/: libavcodec-librsvgdec.patch
ffmpeg_dev/7.0/: configure
ffmpeg_dev/7.0/libavcodec/: Makefile  allcodecs.c
ffmpeg_dev/7.0/patches/: libavcodec-librsvgdec.patch
ffmpeg_dev/common/libavcodec/: nvmpi_dec.c  nvmpi_enc.c
ffmpeg_patches/: ffmpeg4.2_nvmpi.patch  ffmpeg4.4_nvmpi.patch  ffmpeg6.0_nvmpi.patch
include/: NVMPI_bufPool.hpp  NVMPI_frameBuf.hpp  nvUtils2NvBuf.h  nvmpi.h
src/: NVMPI_frameBuf.cpp  nvmpi_dec.cpp  nvmpi_enc.cpp
